[package]
name = "libmcaptcha"
version = "0.2.3"
authors = ["realaravinth <realaravinth@batsense.net>"]
description = "core of mCaptcha captcha system"
keywords = ["DDoS", "mcaptcha", "captcha", "pow"]
homepage = "https://mcaptcha.org"
repository = "https://github.com/realaravinth/libmcaptcha"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"

[dependencies]
actix = { version =  "0.13", optional = true}

serde = "1.0"
serde_json = "1"

pretty_env_logger = {version = "0.5",  optional = true }
log = {version = "0.4",  optional = true }

derive_builder = "0.12"
derive_more = "0.99"

rand = {version = "0.8",  optional = true }


mcaptcha_pow_sha256 = { version = "0.4.0", optional=true }
redis = { version = "0.23", features = ["tokio-comp","aio","r2d2", "connection-manager", "cluster"], optional=true }

tokio = { version = "1.25", features = ["sync"]}
num_cpus = { version = "1.13.1", optional=true }
crossbeam-channel = { version = "0.5.6", optional=true }

[dev-dependencies]
actix-rt = "2"

[features]
default = [
	"minimal",
	"full",
	"actix",
	"rand",
	"log",
	"pretty_env_logger",
	"mcaptcha_pow_sha256",
	"redis",
    "num_cpus",
    "crossbeam-channel"
]
minimal = []
full = []
