[package]
name = "libmcaptcha"
version = "0.2.4"
authors = ["realaravinth <realaravinth@batsense.net>"]
description = "core of mCaptcha captcha system"
keywords = ["DDoS", "mcaptcha", "captcha", "pow"]
homepage = "https://mcaptcha.org"
repository = "https://github.com/realaravinth/libmcaptcha"
documentation = "https://docs.rs/libmcaptcha"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
actix = { version = "0.13", optional = true }

serde = "1"
serde_json = "1"

pretty_env_logger = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }

derive_builder = "0.20"
derive_more = { version = "2", features = ["display", "error"] }

rand = { version = "0.9", optional = true }

mcaptcha_pow_sha256 = { version = "0.5", optional = true }
redis = { version = "1", features = ["tokio-comp", "aio", "connection-manager", "r2d2", "cluster"], optional = true }

tokio = { version = "1", features = ["sync"] }
num_cpus = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
actix-rt = "2"

[features]
default = [
	"minimal",
	"full",
	"actix",
	"rand",
	"log",
	"pretty_env_logger",
	"mcaptcha_pow_sha256",
	"redis",
    "num_cpus",
    "crossbeam-channel"
]
minimal = []
full = []
